--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <li>git clone path-to-repository</li>
         <li>git status - статус</li>
         <li>git add path-to-file - добавить новый файл под контроль гита</li>
-        <li>git commit -am 'added new file index.html</li>
+        <li>git commit -am 'added new file index.html' зафиксировать изменения и дать им комментарий</li>
+        <li>git push - отправить все законченные изменения в репозиторий на сервер</li>
+        <li>git pull - забрать свежие обновления</li>
     </ul>
 </div>
